# safe_network

./: .cursorrules  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  Vagrantfile  prd.md  refactoring_steps.md  release-cycle-info  release-plz.toml  repository_structure.md  reviewpad.yml  rustc-ice-2024-11-18T08_19_29-12764.txt  second.txt  test.sh
adr/: template.md
ant-bootstrap/: Cargo.toml
ant-bootstrap-cache/: Cargo.toml  README.md
ant-bootstrap-cache/src/: cache_store.rs  config.rs  error.rs  initial_peer_discovery.rs  lib.rs
ant-bootstrap-cache/tests/: address_format_tests.rs  cache_tests.rs  cli_integration_tests.rs  integration_tests.rs
ant-bootstrap/src/: cache_store.rs  config.rs  contacts.rs  error.rs  initial_peers.rs  lib.rs
ant-bootstrap/tests/: address_format_tests.rs  cache_tests.rs  cli_integration_tests.rs  integration_tests.rs
ant-build-info/: Cargo.toml  README.md
ant-build-info/src/: lib.rs  release_info.rs
ant-cli/: Cargo.toml  README.md
ant-cli/benches/: files.rs
ant-cli/src/: commands.rs  main.rs  opt.rs
ant-cli/src/access/: data_dir.rs  network.rs  user_data.rs
ant-cli/src/actions/: connect.rs  download.rs
ant-cli/src/commands/: file.rs  register.rs  vault.rs  wallet.rs
ant-cli/src/wallet/: encryption.rs  error.rs  fs.rs  input.rs  mod.rs
ant-evm/: Cargo.toml  README.md
ant-evm/src/: amount.rs  data_payments.rs  lib.rs
ant-logging/: Cargo.toml  README.md
ant-logging/src/: appender.rs  error.rs  layers.rs  lib.rs  metrics.rs
ant-metrics/: Cargo.toml  docker-compose.yml
ant-metrics/src/: main.rs
ant-networking/: Cargo.toml  README.md
ant-networking/src/: cmd.rs  config.rs  driver.rs  error.rs  event.rs  fifo_register.rs  lib.rs  log_markers.rs  messages.rs  network_discovery.rs  record_store.rs  record_store_api.rs  relay_manager.rs  replication_fetcher.rs  transactions.rs  types.rs
ant-networking/src/event/: kad.rs  mod.rs  request_response.rs  swarm.rs
ant-networking/src/kad/: mod.rs
ant-networking/src/metrics/: bad_node.rs  mod.rs
ant-networking/src/network/: behavior.rs  config.rs  error.rs  error_handling.rs  event.rs  integration.rs  logging.rs  metrics.rs  mod.rs  record.rs  swarm.rs  types.rs
ant-networking/src/tests/: config_test.rs  mod.rs  network_test.rs  types_test.rs
ant-networking/src/transport/: mod.rs  other.rs
ant-node/: Cargo.toml  README.md  pyproject.toml
ant-node-manager/: Cargo.toml  README.md  Vagrantfile
ant-node-manager/.vagrant/bundler/: global.sol
ant-node-manager/src/: config.rs  error.rs  helpers.rs  lib.rs  local.rs  rpc.rs  rpc_client.rs
ant-node-manager/tests/: e2e.rs  utils.rs
ant-node-rpc-client/: Cargo.toml  README.md
ant-node-rpc-client/src/: main.rs
ant-node/python/: example.py  setup.py
ant-node/reactivate_examples/: register_inspect.rs  registers.rs
ant-node/src/: error.rs  event.rs  lib.rs  log_markers.rs  metrics.rs  node.rs  put_validation.rs  python.rs  quote.rs  replication.rs
ant-node/tests/: data_with_churn.rs  storage_payments.rs  verify_data_location.rs  verify_routing_table.rs
ant-protocol/: Cargo.toml  README.md  build.rs
ant-protocol/src/: error.rs  lib.rs  messages.rs  node.rs  node_rpc.rs  storage.rs  version.rs
ant-registers/: Cargo.toml  README.md
ant-registers/src/: address.rs  lib.rs  metadata.rs  permissions.rs  reg_crdt.rs
ant-service-management/: Cargo.toml  README.md  build.rs
ant-service-management/src/: auditor.rs  error.rs  faucet.rs  lib.rs  node.rs  rpc.rs
ant-token-supplies/: Cargo.toml  README.md
ant-token-supplies/src/: main.rs
autonomi/: Cargo.toml  README.md  README_PYTHON.md  README_WASM.md  WASM_docs.md  index.html  pyproject.toml
autonomi-cli/: Cargo.toml  README.md
autonomi-cli/src/: commands.rs  main.rs  opt.rs  utils.rs
autonomi/examples/: autonomi_advanced.py  autonomi_data_registers.py  autonomi_example.py  autonomi_private_data.py  autonomi_private_encryption.py  basic.py  data_and_archive.rs  put_and_dir_upload.rs
autonomi/src/: lib.rs  python.rs  secrets.rs  self_encryption.rs  utils.rs  wallet.rs
autonomi/tests/: common.rs  external_signer.rs  file.rs  fs.rs  integration.rs  put.rs  register.rs  transaction.rs  wallet.rs  wasm.rs
autonomi/tests-js/: index.html  index.js  package-lock.json  package.json
autonomi_cli/: Cargo.toml
autonomi_cli/benches/: files.rs
autonomi_cli/src/: commands.rs  log_metrics.rs  main.rs  utils.rs
bootstrap_cache/: Cargo.toml  README.md
bootstrap_cache/src/: cache.rs  cache_store.rs  circuit_breaker.rs  config.rs  error.rs  initial_peer_discovery.rs  lib.rs
bootstrap_cache/tests/: address_format_tests.rs  cache_tests.rs  cli_integration_tests.rs  integration_tests.rs
evm-testnet/: Cargo.toml  README.md
evm-testnet/src/: main.rs
evm_testnet/: Cargo.toml  README.md
evm_testnet/src/: main.rs
evmlib/: Cargo.toml  README.md
evmlib/abi/: IPaymentVault.json
evmlib/artifacts/: AutonomiNetworkToken.json  ChunkPayments.json  DataPayments.json  PaymentVaultNoProxy.json
evmlib/src/: common.rs  cryptography.rs  event.rs  external_signer.rs  lib.rs  quoting_metrics.rs  signing.rs  testnet.rs  transaction.rs  utils.rs  wallet.rs
evmlib/tests/: chunk_payments.rs  data_payments.rs  network_token.rs  payment_vault.rs  wallet.rs
libautonomi/: Cargo.toml  README.md
libautonomi/src/: client_wallet.rs  lib.rs  secrets.rs  self_encryption.rs
libautonomi/tests/: file.rs  put.rs  register.rs
metrics/: Cargo.toml  README.md  docker-compose.yml
metrics/grafana/: config.monitoring
metrics/src/: main.rs
nat-detection/: Cargo.toml  README.md
nat-detection/src/: main.rs
node-launchpad/: .envrc  CHANGELOG.md  Cargo.toml  LICENSE  build.rs
node-launchpad/.config/: config.json5
node-launchpad/src/: action.rs  app.rs  components.rs  config.rs  connection_mode.rs  error.rs  lib.rs  mode.rs  node_mgmt.rs  node_stats.rs  style.rs  system.rs  tui.rs  utils.rs
safenode/: CHANGELOG.md  Cargo.toml  build.rs
safenode/examples/: registers.rs  safenode_rpc_client.rs
safenode/src/: git_hash.rs  lib.rs
(+936 files in other folders)
