[workspace]
resolver = "2"
members = [
    "sn_build_info",
    "sn_cli",
    "sn_client",
    "sn_faucet",
    "sn_logging",
    "sn_metrics",
    "sn_networking",
    "sn_node",
    "sn_node_manager",
    "sn_node_rpc_client",
    "sn_peers_acquisition",
    "sn_protocol",
    "sn_registers",
    "sn_transfers",
    "token_supplies",
]

[workspace.lints.rust]
arithmetic_overflow = "forbid"
mutable_transmutes = "forbid"
no_mangle_const_items = "forbid"
unknown_crate_types = "forbid"
unsafe_code = "forbid"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"

[workspace.lints.clippy]
uninlined_format_args = "warn"
unicode_not_nfc = "warn"
unused_async = "warn"
unwrap_used = "warn"

[profile.release]
debug = 0
strip = "debuginfo"
