[workspace]
resolver = "2"
members = [
    "sn_auditor",
    "sn_build_info",
    "sn_cli",
    "sn_client",
    "sn_faucet",
    "sn_logging",
    "sn_metrics",
    "nat-detection",
    "sn_networking",
    "sn_node",
    "node-launchpad",
    "sn_node_manager",
    "sn_node_rpc_client",
    "sn_peers_acquisition",
    "sn_protocol",
    "sn_registers",
    "sn_service_management",
    "sn_transfers",
    "test_utils",
    "token_supplies",
]

[workspace.lints.rust]
arithmetic_overflow = "forbid"
mutable_transmutes = "forbid"
no_mangle_const_items = "forbid"
unknown_crate_types = "forbid"
unsafe_code = "forbid"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"

[workspace.lints.clippy]
uninlined_format_args = "warn"
unicode_not_nfc = "warn"
unused_async = "warn"
unwrap_used = "warn"
clone_on_ref_ptr = "warn"

[profile.release]
debug = 0
strip = "debuginfo"


[workspace.metadata.release]
pre-release-commit-message = "chore(release): release commit, tags, deps and changelog updates"
publish = false
push = false
tag = false
