[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Bootstrap Cache functionality for Autonomi"
edition = "2021"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "ant-bootstrap-cache"
readme = "README.md"
repository = "https://github.com/maidsafe/autonomi"
version = "0.1.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs-next = "~2.0.0"
fs2 = "0.4.3"
futures = "0.3.30"
libp2p = { version = "0.54.1", features = ["serde"] }
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ant-protocol = { version = "0.17.15", path = "../ant-protocol" }
tempfile = "3.8.1"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full", "sync"] }
tracing = "0.1"
url = "2.4.0"

[dev-dependencies]
wiremock = "0.5"
tokio = { version = "1.0", features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }