[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Bootstrap functionality for Autonomi"
edition = "2021"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "ant-bootstrap"
readme = "README.md"
repository = "https://github.com/maidsafe/autonomi"
version = "0.1.0-rc.2"

[features]
local = []

[dependencies]
ant-logging = { path = "../ant-logging", version = "0.2.41-rc.2" }
ant-protocol = { path = "../ant-protocol", version = "0.3.0-rc.2" }
atomic-write-file = "0.2.2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.2.1", features = ["derive", "env"] }
dirs-next = "~2.0.0"
futures = "0.3.30"
libp2p = { version = "0.54.1", features = ["serde"] }
reqwest = { version = "0.12.2", default-features = false, features = [
    "rustls-tls-manual-roots",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["time"] }
tracing = "0.1"
url = "2.4.0"

[dev-dependencies]
wiremock = "0.5"
tokio = { version = "1.0", features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.8.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasmtimer = "0.2.0"
