[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
name = "ant-cli"
description = "CLI client for the Autonomi network"
license = "GPL-3.0"
version = "0.3.0-rc.2"
edition = "2021"
homepage = "https://maidsafe.net"
readme = "README.md"
repository = "https://github.com/maidsafe/autonomi"

[[bin]]
name = "ant"
path = "src/main.rs"

[features]
default = ["metrics"]
local = ["ant-bootstrap/local", "autonomi/local"]
metrics = ["ant-logging/process-metrics"]

[[bench]]
name = "files"
harness = false

[dependencies]
ant-bootstrap = { path = "../ant-bootstrap", version = "0.1.0-rc.2" }
ant-build-info = { path = "../ant-build-info", version = "0.1.20-rc.2" }
ant-logging = { path = "../ant-logging", version = "0.2.41-rc.2" }
ant-protocol = { path = "../ant-protocol", version = "0.3.0-rc.2" }
autonomi = { path = "../autonomi", version = "0.3.0-rc.2", features = [
    "fs",
    "vault",
    "registers",
    "loud",
]}
clap = { version = "4.2.1", features = ["derive"] }
color-eyre = "~0.6"
const-hex = "1.13.1"
dirs-next = "~2.0.0"
hex = "0.4.3"
indicatif = { version = "0.17.5", features = ["tokio"] }
prettytable = "0.10.0"
rand = { version = "~0.8.5", features = ["small_rng"] }
ring = "0.17.8"
rpassword = "7.0"
serde = "1.0.210"
serde_json = "1.0.132"
thiserror = "1.0"
tokio = { version = "1.32.0", features = [
    "io-util",
    "macros",
    "parking_lot",
    "rt",
    "sync",
    "time",
    "fs",
]}
tracing = { version = "~0.1.26" }
walkdir = "2.5.0"

[dev-dependencies]
autonomi = { path = "../autonomi", version = "0.3.0-rc.2", features = ["fs"]}
criterion = "0.5.1"
eyre = "0.6.8"
rand = { version = "~0.8.5", features = ["small_rng"] }
rayon = "1.8.0"
tempfile = "3.6.0"

[lints]
workspace = true
