[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "EVM transfers for Autonomi"
edition = "2021"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "ant-evm"
readme = "README.md"
repository = "https://github.com/maidsafe/autonomi"
version = "0.1.5-rc.2"

[features]
local = ["evmlib/local"]
external-signer = ["evmlib/external-signer"]
test-utils = []

[dependencies]
custom_debug = "~0.6.1"
evmlib = { path = "../evmlib", version = "0.1.5-rc.2" }
hex = "~0.4.3"
lazy_static = "~1.4.0"
libp2p = { version = "0.54.1", features = ["identify", "kad"] }
rand = { version = "~0.8.5", features = ["small_rng"] }
ring = "0.17.8"
rmp-serde = "1.1.1"
serde = { version = "1.0.133", features = ["derive", "rc"] }
serde_json = "1.0.108"
tempfile = "3.10.1"
thiserror = "1.0.24"
tiny-keccak = { version = "~2.0.2", features = ["sha3"] }
tracing = { version = "~0.1.26" }
xor_name = "5.0.0"

[dev-dependencies]
tokio = { version = "1.32.0", features = ["macros", "rt"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasmtimer = { version = "0.2.0", features = ["serde"] }

[lints]
workspace = true
