[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "The Autonomi node binary"
name = "ant-node"
version = "0.3.0-rc.2"
edition = "2021"
license = "GPL-3.0"
homepage = "https://maidsafe.net"
readme = "README.md"
repository = "https://github.com/maidsafe/autonomi"

[[bin]]
name = "antnode"
path = "src/bin/antnode/main.rs"

[features]
default = ["metrics", "upnp", "open-metrics", "encrypt-records"]
encrypt-records = ["ant-networking/encrypt-records"]
extension-module = ["pyo3/extension-module"]
local = ["ant-networking/local", "ant-evm/local", "ant-bootstrap/local"]
loud = ["ant-networking/loud"] # loud mode: print important messages to console
metrics = ["ant-logging/process-metrics"]
nightly = []
open-metrics = ["ant-networking/open-metrics", "prometheus-client"]
otlp = ["ant-logging/otlp"]
upnp = ["ant-networking/upnp"]

[dependencies]
ant-bootstrap = { path = "../ant-bootstrap", version = "0.1.0-rc.2" }
ant-build-info = { path = "../ant-build-info", version = "0.1.20-rc.2" }
ant-evm = { path = "../ant-evm", version = "0.1.5-rc.2" }
ant-logging = { path = "../ant-logging", version = "0.2.41-rc.2" }
ant-networking = { path = "../ant-networking", version = "0.3.0-rc.2" }
ant-protocol = { path = "../ant-protocol", version = "0.3.0-rc.2" }
ant-registers = { path = "../ant-registers", version = "0.4.4-rc.2" }
ant-service-management = { path = "../ant-service-management", version = "0.4.4-rc.2" }
async-trait = "0.1"
bls = { package = "blsttc", version = "8.0.1" }
bytes = { version = "1.0.1", features = ["serde"] }
clap = { version = "4.2.1", features = ["derive"] }
crdts = { version = "7.3", default-features = false, features = ["merkle"] }
chrono = "~0.4.19"
color-eyre = "0.6.2"
const-hex = "1.12.0"
custom_debug = "~0.6.1"
dirs-next = "~2.0.0"
eyre = "0.6.8"
file-rotate = "0.7.3"
futures = "~0.3.13"
hex = "~0.4.3"
itertools = "~0.12.1"
libp2p = { version = "0.54.1", features = ["tokio", "dns", "kad", "macros"] }
num-traits = "0.2"
prometheus-client = { version = "0.22", optional = true }
# watch out updating this, protoc compiler needs to be installed on all build systems
# arm builds + musl are very problematic
prost = { version = "0.9" }
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
rand = { version = "~0.8.5", features = ["small_rng"] }
rmp-serde = "1.1.1"
rayon = "1.8.0"
self_encryption = "~0.30.0"
serde = { version = "1.0.133", features = ["derive", "rc"] }
strum = { version = "0.26.2", features = ["derive"] }
sysinfo = { version = "0.30.8", default-features = false }
thiserror = "1.0.23"
tokio = { version = "1.32.0", features = [
    "io-util",
    "macros",
    "parking_lot",
    "rt",
    "sync",
    "time",
    "signal",
] }
tokio-stream = { version = "~0.1.12" }
tonic = { version = "0.6.2" }
tracing = { version = "~0.1.26" }
tracing-appender = "~0.2.0"
tracing-opentelemetry = { version = "0.21", optional = true }
tracing-subscriber = { version = "0.3.16" }
walkdir = "~2.5.0"
xor_name = "5.0.0"

[dev-dependencies]
ant-protocol = { path = "../ant-protocol", version = "0.3.0-rc.2", features = ["rpc"] }
assert_fs = "1.0.0"
evmlib = { path = "../evmlib", version = "0.1.5-rc.2" }
autonomi = { path = "../autonomi", version = "0.3.0-rc.2", features = ["registers"] }
reqwest = { version = "0.12.2", default-features = false, features = [
    "rustls-tls-manual-roots",
] }
serde_json = "1.0"
tempfile = "3.6.0"
# Do not specify the version field. Release process expects even the local dev deps to be published.
# Removing the version field is a workaround.
test-utils = { path = "../test-utils" }

[lints]
workspace = true
