[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Defines the network protocol for Autonomi"
edition = "2021"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "ant-protocol"
readme = "README.md"
repository = "https://github.com/maidsafe/autonomi"
version = "0.3.0-rc.2"

[features]
default = []
rpc = ["tonic", "prost"]

[dependencies]
ant-build-info = { path = "../ant-build-info", version = "0.1.20-rc.2" }
ant-evm = { path = "../ant-evm", version = "0.1.5-rc.2" }
ant-registers = { path = "../ant-registers", version = "0.4.4-rc.2" }
bls = { package = "blsttc", version = "8.0.1" }
bytes = { version = "1.0.1", features = ["serde"] }
color-eyre = "0.6.2"
crdts = { version = "7.3", default-features = false, features = ["merkle"] }
custom_debug = "~0.6.1"
dirs-next = "~2.0.0"
exponential-backoff = "2.0.0"
hex = "~0.4.3"
lazy_static = "1.4.0"
libp2p = { version = "0.54.1", features = ["identify", "kad"] }
# # watch out updating this, protoc compiler needs to be installed on all build systems
# # arm builds + musl are very problematic
# prost and tonic are needed for the RPC server messages, not the underlying protocol
prost = { version = "0.9", optional = true }
rmp-serde = "1.1.1"
serde = { version = "1.0.133", features = ["derive", "rc"] }
serde_json = "1.0"
sha2 = "0.10.7"
thiserror = "1.0.23"
tiny-keccak = { version = "~2.0.2", features = ["sha3"] }
tracing = { version = "~0.1.26" }
tonic = { version = "0.6.2", optional = true, default-features = false, features = ["prost", "tls", "codegen"] }
xor_name = "5.0.0"

[build-dependencies]
# watch out updating this, protoc compiler needs to be installed on all build systems
# arm builds + musl are very problematic
tonic-build = { version = "~0.6.2" }

[lints]
workspace = true
