[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Register logic for Autonomi"
edition = "2021"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "ant-registers"
readme = "README.md"
repository = "https://github.com/maidsafe/autonomi"
version = "0.4.4-rc.2"

[features]
test-utils = []

[dependencies]
bls = { package = "blsttc", version = "8.0.1" }
crdts = { version = "7.3", default-features = false, features = ["merkle"] }
hex = "~0.4.3"
rmp-serde = "1.1.1"
serde = { version = "1.0.133", features = [ "derive", "rc" ]}
thiserror = "1.0.23"
tiny-keccak = "~2.0.2"
xor_name = "5.0.0"

[dev-dependencies]
rand = { version = "~0.8.5", features = ["small_rng"] }
proptest = { version = "1.0.0" }
eyre = "0.6.8"

[lints]
workspace = true
