[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Token supplies for Autonomi"
edition = "2021"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "ant-token-supplies"
readme = "README.md"
repository = "https://github.com/maidsafe/autonomi"
version = "0.1.59-rc.2"


[dependencies]
dirs-next = "2.0"
reqwest = { version = "0.11", default-features=false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
warp = "0.3"
